# qt5platform-plugins

./: CMakeLists.txt
debian/: changelog  control
src/: dapplicationeventmonitor.cpp  dbackingstoreproxy.cpp  ddesktopinputselectioncontrol.cpp  dinputselectionhandle.cpp  dnativesettings.cpp  dopenglpaintdevice.cpp  dplatformsettings.cpp  dselectedtexttooltip.cpp  dxcbxsettings.cpp  global.cpp  global.h  src.cmake  vtablehook.cpp
wayland/dwayland/: CMakeLists.txt  dhighdpi.cpp  dnotitlebarwindowhelper_wl.cpp  dwaylandintegration.cpp  dwaylandinterfacehook.cpp  dwaylandinterfacehook.h  dxsettings.cpp
wayland/wayland-shell/: CMakeLists.txt  dkeyboard.cpp  dkeyboard.h  dwaylandshellmanager.cpp  dwaylandshellmanager.h  main.cpp  wayland-shell.pro
wayland/wayland-shell/config.tests/deepin-kwin-test/: deepin-kwin-test.pro  main.cpp
wayland/wayland-shell/config.tests/dwayland_or_kwayland_test/: main.cpp
wayland/wayland-shell/config.tests/wayland_test/: main.cpp  wayland_test.pro
xcb/: CMakeLists.txt  dforeignplatformwindow_x11.cpp  dframewindow.cpp  dhighdpi.cpp  dnotitlebarwindowhelper.cpp  dplatformbackingstore.cpp  dplatformbackingstorehelper.cpp  dplatforminputcontexthook.cpp  dplatformintegration.cpp  dplatformnativeinterfacehook.cpp  dplatformopenglcontexthelper.cpp  dplatformwindowhelper.cpp  dplatformwindowhook.cpp  dxcbwmsupport.cpp  linux.cmake  main.cpp  utility.h  utility_x11.cpp  windoweventhook.cpp  xcbnativeeventfilter.cpp
